--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <div class="profile-thumb"></div>
-            <h1>Sakthi</h1>
+            <h1>avinesh</h1>
             <h3>Web Developer / Designer</h3>
         </div>
     </header>
@@ -21,16 +21,16 @@
             <div class="row">
                 <div class="col-md-4">
                     <ul class="info">
-                        <li><span>Full Name:</span>Sakthi</li>
-                        <li><span>Phone:</span>+ 1234 567 890</li>
-                        <li><span>Email:</span>Sakthi111@gmail.com</li>
-                        <li><span>Address:</span>Your address</li>
+                        <li><span>Full Name:</span>avinesh</li>
+                        <li><span>Phone:</span>+ 9843606625</li>
+                        <li><span>Email:</span>aavinesh24@gmail.com</li>
+                        <li><span>Address:</span>1/5 new Street velmaur madurantakam 603 201</li>
                     </ul>
                 </div>
                 <div class="col-md-8">
                     <h2>Hello There!</h2>
-                    <p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-                    <p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+                    <p>Dedicated and highly motivated computer science final year student with a passion for IT field jobs. . Adept at working in collaborative environments and delivering results with efficiency. Seeking an opportunity to apply my academic knowledge, practical skills, and enthusiasm to contribute to a dynamic organization while growing professionally.
+                    <p>
                 </div>
             </div>
         </div>
@@ -47,10 +47,10 @@
                             <div class="timeline-panel">
                                 <h3>Courses</h3>               
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>java</li>
+                                    <li>python</li>
+                                    <li>My SQL</li>
+                                    <li>Htmo</li>
                                 </ul>
                             </div>
                         </li>
@@ -59,10 +59,10 @@
                             <div class="timeline-panel">
                                 <h3>Skills</h3>
                                 <ul>
-                                    <li>HTML</li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>time management</li>
+                                    <li>problem solving</li>
+                                    <li> communication skills</li>
+                                    <li>video call editing</li>
                                 </ul>
                             </div>
                         </li>
@@ -78,4 +78,5 @@
         </div>
     </footer>
 </body>
+
 </html>
